# search-and-rescue-robot-2024

./: README.md
robot/3dparty/: Readme.md
robot/3dparty/exploration/: Dockerfile.explorer  Readme.md  check_ros.sh  docker-compose.yaml
robot/3dparty/exploration/src/move_base_switcher/: CMakeLists.txt  package.xml
robot/3dparty/exploration/src/move_base_switcher/cfg/: enableExplorer.cfg
robot/3dparty/exploration/src/move_base_switcher/launch/: capsulated_explorer.launch  debugPublisher.launch  standardExplorer.launch
robot/3dparty/exploration/src/move_base_switcher/scripts/: actionLibSwitcher.py  debugPublisher.py
robot/3dparty/mapping/: Dockerfile.cartographer  Dockerfile.gmapping  Dockerfile.lio-sam  Dockerfile.map_connector  Dockerfile.octomap  Dockerfile.slam_toolbox  Readme.md  check_ros.sh  docker-compose.yaml
robot/3dparty/mapping/src/: octomap.launch
robot/3dparty/mapping/src/cartographer_tracker/: CMakeLists.txt  Readme.md  package.xml
robot/3dparty/mapping/src/cartographer_tracker/configuration_files/: 2d_slamming.lua
robot/3dparty/mapping/src/cartographer_tracker/launch/: 2d_slamming.launch
robot/3dparty/mapping/src/lio-sam/config/: lidar_imu_calib.txt.backup  params.yaml  params.yaml.backup
robot/3dparty/mapping/src/lio-sam/launch/: run.launch
robot/3dparty/mapping/src/map_connector/: node.py
robot/3dparty/mapping/src/slam_toolbox/: mapper_params_lifelong.yaml  slam_toolbox_lifelong.launch
robot/3dparty/perception/: Dockerfile.jetson_bridge  Dockerfile.laser_merge  Dockerfile.lidar_footprint_filter  Dockerfile.pointcloud2laserscan  Dockerfile.realsense  Readme.md  docker-compose.yml
robot/3dparty/perception/src/: laserscan_multi_merger.launch  pointcloud2laserscan.launch
robot/3dparty/perception/src/jetson_bridge/: bridge.py  connector_d455_compressed.py  connector_l515_compressed.py  connector_scan_front.py  requirements.txt
robot/3dparty/perception/src/lidar_footprint_filter/: footprint_filter.launch  taurob_footprint_config.yaml
robot/3dparty/perception/src/realsense/: installMainline.sh  installRealsenseDKMSOnHost.sh  readme.md  rs_camera.launch
robot/3dparty/sensing/: Dockerfile.lord  Dockerfile.sick  Dockerfile.velodyne  Readme.md  docker-compose.yaml
robot/3dparty/systemd/: Readme.md  check_ros.sh  compose@.service
robot/navigation/: Dockerfile.navigation.comehome_pose_tf2  Dockerfile.navigation.enrich_tools  Dockerfile.navigation.mux  Dockerfile.navigation.taurob_navigation  build_docker_navigation.sh  docker-compose.yaml  run_docker_navigation_comehome_pose_tf2.sh  run_docker_navigation_taurob_navigation.sh
robot/navigation/src/comehome_pose_tf2/: CMakeLists.txt  Readme.md  package.xml
robot/navigation/src/comehome_pose_tf2/cfg/: LookupTransform.cfg
robot/navigation/src/comehome_pose_tf2/launch/: comehome_tf_transform.launch
robot/navigation/src/comehome_pose_tf2/script/: comehome_tf_transform.py
robot/navigation/src/enrich_tools/: checkOperatorAndCallHome.py  preemptGoalFromCMD.py
robot/navigation/src/mux/: genericMux.py  muxConfig.json  muxInstantiator.py  muxParameters.md
robot/navigation/src/taurob_navigation/: CMakeLists.txt  Readme.md  package.xml
robot/navigation/src/taurob_navigation/configuration/: controllers.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planners.yaml  recovery_behaviors.yaml
robot/navigation/src/taurob_navigation/launch/: taurob_navigation.launch
robot/navigation/src/taurob_navigation/script/: taurob_smach.py  taurob_smach_replan.py
robot/systemd/: Readme.md  check_ros.sh  taurob@.service
