<?xml version="1.0"?>
<package format="2">
  <name>comehome_pose_tf2</name>
  <version>0.0.0</version>
  <description>The comehome_pose_tf2 package</description>



  <maintainer email="georg.novotny@technikum-wien.at">Georg Novotny</maintainer>
  <author email="georg.novotny@technikum-wien.at">Georg Novotny</author>
  <author email="florian.voglsinger@technikum-wien.at">Florian Voglsinger</author>
  
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_py</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
