<?xml version="1.0"?>
<package format="2">
  <name>cartographer_tracker</name>
  <version>0.0.0</version>
  <description>The cartographer_tracker package</description>

  <maintainer email="todo@todo.todo">florian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
